Name:                   HFuse
Version:                0.2.4
License:                BSD3
License-File:		LICENSE
Author:                 Jeremy Bobbio
Maintainer: 		Taru Karttunen <taruti@taruti.net>
Synopsis:               HFuse is a binding for the Linux FUSE library.
Homepage:               https://github.com/realdesktop/hfuse
Category:               System
Stability:              Experimental
Cabal-Version:          >= 1.2
Build-Type:             Simple
Extra-source-files:     README

Library
  Build-Depends:          base >= 4 && < 5, unix, bytestring
  exposed-Modules:        System.Fuse
  Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  Includes:               dirent.h, fuse.h, fcntl.h
  if os(freebsd) {
    Includes:             sys/param.h, sys/mount.h
    CC-Options:           -Df_namelen=f_namemax
  } else {
    Includes:             sys/statfs.h
  }
  Include-Dirs:           /usr/include, /usr/local/include, .
  Extra-Libraries:        fuse
  Extra-Lib-Dirs:         /usr/local/lib
  CC-Options:             -D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=26
  if os(darwin) {
    CC-Options:           "-DMACFUSE"
  }

