Name:                   HFuse
Version:                0.2.4
License:                BSD3
License-File:		LICENSE
Author:                 Jeremy Bobbio
Maintainer: 		Taru Karttunen <taruti@taruti.net>
Synopsis:               HFuse is a binding for the Linux FUSE library.
Homepage:               https://github.com/realdesktop/hfuse
Category:               System
Stability:              Experimental
Cabal-Version:          >= 1.2
Build-Type:             Simple
Extra-source-files:     README

Library
  Build-Depends:          base >= 4 && < 5, unix, bytestring
  exposed-Modules:        System.Fuse
  Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  if os(darwin) {
      Includes:               dirent.h, fuse.h, fcntl.h
      Include-Dirs:           /usr/local/include/osxfuse, /usr/include, /usr/local/include, .
  } else {
      Includes:               sys/statfs.h, dirent.h, fuse.h, fcntl.h
      Include-Dirs:           /usr/include, /usr/local/include, .
  }
  Extra-Libraries:        fuse
  Extra-Lib-Dirs:         /usr/local/lib
  CC-Options:             -D_FILE_OFFSET_BITS=64
  if os(darwin) {
    CC-Options:           "-DMACFUSE"
    CC-Options:           "-DFUSE_USE_VERSION=26"
  }

